style.css
body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    font-size: 16px;
    line-height: 1.6;
}

.title_header_index01 {
    font-size: xxx-large;
    font-weight: bold;
}

.title_header_index02 {
    font-size: xx-large;
    font-weight: lighter;
}

.login {
    background-color: #fff;
    width: fit-content;
    height: fit-content;
    padding: 30px;
    border-radius: 20px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
    text-align: center;
}

.login_title {
    font-weight: bold;
    font-size: xxx-large;
    font-family: sans-serif;
}

.container {
    flex: 1;
}

.container_login {
    width: 100%;
    max-width: 400px;
    margin: 0 auto;
    padding: 20px;
    display: flex;
    flex-direction: column;
    flex-grow: 0;
    align-items: center;
    justify-content: center;
    border-radius: 5px;
}

.footer {
    margin-top: auto;
    width: 100%;
    background-color: #343a40;
    color: #fff;
    text-align: center;
    padding: 10px 0;
}

.footer a {
    color: #fff;
    margin: 0 10px;
    text-decoration: none;
}

.footer .separator {
    margin: 0 5px;
}

img {
    max-width: 100%;
    height: auto;
    width: auto;
    background-repeat: no-repeat;
}

.title_header_pages01 {
    font-size: xx-large;
    font-weight: bold;
}

.gold_leaderboard {
    color: gold;
    font-weight: bolder;
}

.silver_leaderboard {
    color: silver;
    font-weight: bold;
}

.bronze_leaderboard {
    color: saddlebrown;
    font-weight: bold;
}

.profile_h1 {
    font-weight: bold;
    font-size: xxx-large;
}

.profile_h2 {
    font-weight: bold;
    font-size: x-large;
}

.button-container {
    display: flex;
    gap: 10px;
}

.margin-top-30 {
    margin-top: 30px;
}

.message {
    background-color: #f9f9f9;
    padding: 15px;
    margin-bottom: 10px;
    border-radius: 5px;
}

.delete-btn {
    margin-top: 10px;
}

.reply-btn {
    margin-top: 10px;
    margin-right: 10px;
}

